[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/imageselect.gd" type="Script" id=1]
[ext_resource path="res://assets/images/gui/panels/noimage.png" type="Texture" id=2]


[node name="Panel" type="WindowDialog"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1745.0
margin_top = -1026.0
margin_right = -161.0
margin_bottom = -106.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 8.0
margin_right = 1245.0
margin_bottom = 889.0
size_flags_horizontal = 2
size_flags_vertical = 2
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 15
custom_constants/hseparation = 5
columns = 8

[node name="Button" type="TextureButton" parent="ScrollContainer/GridContainer"]
visible = false
margin_right = 150.0
margin_bottom = 175.0
rect_min_size = Vector2( 150, 175 )
size_flags_horizontal = 0
size_flags_vertical = 0
expand = true

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/Button"]
margin_top = 150.0
margin_right = 151.0
margin_bottom = 201.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "nagdsagashfhahhme"
align = 1
clip_text = true

[node name="pic" type="TextureRect" parent="ScrollContainer/GridContainer/Button"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="cancelportait" type="Button" parent="."]
visible = false
margin_left = 369.515
margin_top = 439.0
margin_right = 583.515
margin_bottom = 473.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Cancel"

[node name="racelock" type="CheckBox" parent="."]
margin_left = 1289.56
margin_top = 25.3
margin_right = 1461.56
margin_bottom = 57.3
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Race Locked"

[node name="search" type="LineEdit" parent="."]
margin_left = 1293.56
margin_top = 60.3
margin_right = 1543.56
margin_bottom = 94.3
size_flags_horizontal = 2
size_flags_vertical = 2
placeholder_text = "Search"

[node name="noimagestext" type="RichTextLabel" parent="."]
visible = false
margin_left = 50.0
margin_top = 33.0
margin_right = 674.0
margin_bottom = 172.0
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true
bbcode_text = "[center]You have no images with fitting criterias available.[/center]
[center]Put your images into portrait folder and hit 'Reload Portraits' button[/center]"
text = "You have no images with fitting criterias available.
Put your images into portrait folder and hit 'Reload Portraits' button"

[node name="addcustom" type="Button" parent="."]
margin_left = 1294.56
margin_top = 106.3
margin_right = 1544.56
margin_bottom = 146.3
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Add custom image"

[node name="openfolder" type="Button" parent="."]
margin_left = 1294.56
margin_top = 154.3
margin_right = 1544.56
margin_bottom = 194.3
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Open system folder"

[node name="reloadlist" type="Button" parent="."]
margin_left = 1294.56
margin_top = 200.3
margin_right = 1544.56
margin_bottom = 240.3
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Reload portraits"

[node name="removeportrait" type="Button" parent="."]
margin_left = 1294.56
margin_top = 245.3
margin_right = 1544.56
margin_bottom = 285.3
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Reset the image"

[node name="reverseportrait" type="Button" parent="."]
visible = false
margin_left = 706.0
margin_top = 286.0
margin_right = 956.0
margin_bottom = 326.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Reverse to default"

[node name="selectfolder" type="Button" parent="."]
margin_left = 1294.56
margin_top = 336.3
margin_right = 1544.56
margin_bottom = 376.3
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Select Folders"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 430.512
margin_top = 119.245
margin_right = 1209.51
margin_bottom = 711.245
size_flags_horizontal = 2
size_flags_vertical = 2
window_title = "Open a File"
dialog_text = "Select New Portait"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.jpg", "*.png" )
current_dir = "C:/Users/1/Desktop/godot/strive3.1"
current_path = "C:/Users/1/Desktop/godot/strive3.1/"

[node name="selectfolders" type="WindowDialog" parent="."]
margin_left = 488.824
margin_top = 211.656
margin_right = 1197.82
margin_bottom = 571.656
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="portratislabel" type="Label" parent="selectfolders"]
margin_left = 14.0
margin_top = 14.0
margin_right = 267.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Portrait folder: "

[node name="spritelabel" type="Label" parent="selectfolders"]
margin_left = 11.6673
margin_top = 79.1626
margin_right = 266.667
margin_bottom = 103.163
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Body folder: "

[node name="closefolderselect" type="Button" parent="selectfolders"]
margin_left = 250.578
margin_top = 312.84
margin_right = 412.578
margin_bottom = 343.84
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Close"

[node name="chooseportraitolder" type="Button" parent="selectfolders"]
margin_left = 19.5274
margin_top = 42.3252
margin_right = 539.527
margin_bottom = 72.3252
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Close"
align = 0

[node name="choosebodyfolder" type="Button" parent="selectfolders"]
margin_left = 19.86
margin_top = 107.488
margin_right = 538.86
margin_bottom = 137.488
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Close"
align = 0

[node name="RichTextLabel" type="RichTextLabel" parent="selectfolders"]
margin_left = 56.4991
margin_top = 155.159
margin_right = 662.499
margin_bottom = 255.159
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true
bbcode_text = "Selected folder and all subfolders in it will provide images to the required area and will be saved upon exit"
text = "Selected folder and all subfolders in it will provide images to the required area and will be saved upon exit"

[node name="folderdialogue" type="FileDialog" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1176.03
margin_top = -695.712
margin_right = -389.032
margin_bottom = -291.712
size_flags_horizontal = 2
size_flags_vertical = 2
window_title = "Open a Directory"
dialog_text = "Select default path folder"
mode = 2
access = 2
current_dir = "C:/Users/1/Desktop/godot/Strive-Sequel"
current_path = "C:/Users/1/Desktop/godot/Strive-Sequel/"

[node name="assignboth" type="CheckBox" parent="."]
margin_left = 1298.56
margin_top = 395.3
margin_right = 1463.56
margin_bottom = 427.3
hint_tooltip = "Will attempt to assign both portrait and body image, if same file name exists in both folders"
text = "Assign Both"
[connection signal="pressed" from="cancelportait" to="." method="_on_cancelportait_pressed"]
[connection signal="pressed" from="racelock" to="." method="_on_racelock_pressed"]
[connection signal="text_changed" from="search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="addcustom" to="." method="_on_addcustom_pressed"]
[connection signal="pressed" from="openfolder" to="." method="_on_openfolder_pressed"]
[connection signal="pressed" from="reloadlist" to="." method="_on_reloadlist_pressed"]
[connection signal="pressed" from="removeportrait" to="." method="_on_removeportrait_pressed"]
[connection signal="pressed" from="reverseportrait" to="." method="_on_reverseportrait_pressed"]
[connection signal="pressed" from="selectfolder" to="." method="_on_selectfolder_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="selectfolders/closefolderselect" to="." method="_on_closefolderselect_pressed"]
[connection signal="pressed" from="selectfolders/chooseportraitolder" to="." method="_on_chooseportraitolder_pressed"]
[connection signal="pressed" from="selectfolders/choosebodyfolder" to="." method="_on_choosebodyfolder_pressed"]
[connection signal="dir_selected" from="folderdialogue" to="." method="_on_folderdialogue_dir_selected"]
